<resources>
    <string name="folder_name" translatable="false">community</string>
    <string name="action_disable" translatable="false">Disable</string>
    <string name="action_location" translatable="false">Location</string>
    <string name="action_active" translatable="false">Active</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <string name="nav_item_home" translatable="false">Home</string>
    <string name="nav_item_filter" translatable="false">Filters</string>
    <string name="nav_item_statistic" translatable="false">Statistics</string>
    <string name="nav_item_committee" translatable="false">Committee</string>
    <string name="label_add_fact" translatable="false">Add Fact</string>
    <string name="label_add_photos" translatable="false">Add Photos</string>
    <string name="label_add_audio" translatable="false">Add Audio</string>
    <string name="label_add_relative" translatable="false">Add Relative</string>
    <string name="key_1" translatable="false">1</string>
    <string name="key_2" translatable="false">2</string>
    <string name="key_3" translatable="false">3</string>
    <string name="key_4" translatable="false">4</string>
    <string name="key_5" translatable="false">5</string>
    <string name="key_6" translatable="false">6</string>
    <string name="key_7" translatable="false">7</string>
    <string name="key_8" translatable="false">8</string>
    <string name="key_9" translatable="false">9</string>
    <string name="key_0" translatable="false">0</string>
    <string name="server_not_available" translatable="false">Server error</string>
    <string name="login_1" translatable="false">Ii5POjxrXA4</string>
    <string-array name="bloodGroup">
        <item>O+Ve</item>
        <item>O-Ve</item>
        <item>B+Ve</item>
        <item>B-Ve</item>
        <item>A+Ve</item>
        <item>A-Ve</item>
        <item>AB+Ve</item>
        <item>AB-Ve</item>
    </string-array>
    <string-array name="main_menu">
        <item>City \u0020 \u0020 \u0020 </item>
        <item>QRCode \u0020</item>
        <item>Distance \u0020</item>
        <item>Matrimony</item>
        <item>Add Member \u0020</item>
        <item>MyEvent \u0020</item>
        <item>Favorite \u0020 \u0020</item>
        <item>Admin \u0020 \u0020</item>
        <item>Restricted</item>
        <item>NewEvent \u0020</item>
        <item>Uploads \u0020</item>

        <item>Register \u0020 \u0020</item>

        <item>Contacts \u0020 \u0020</item>
    </string-array>
    <string name="married" translatable="false">Married</string>
    <string name="marital">Marital</string>
    <string-array name="languages">
        <item>Choose Language</item>
        <item>@string/_english</item>
        
    </string-array>
    <string name="_english" translatable="false">English</string>
    <string name="_gujarati" translatable="false">ગુજરાતી</string>
    <string name="_hindi" translatable="false">हिन्दी</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_filter</item>
        <item>@string/nav_item_statistic</item>
        <item>@string/nav_item_committee</item>

    </string-array>
    <string-array name="add_relative_labels">
        <item>@string/partner</item>
        <item>@string/father</item>
        <item>@string/mother</item>
        <item>@string/brother</item>
        <item>@string/sister</item>
        <item>@string/son</item>
        <item>@string/daughter</item>
    </string-array>
    <string-array name="lst_relative">
        <item>@string/add_new</item>
        <item>@string/wife</item>
        <item>@string/husband</item>
        <item>@string/son</item>
        <item>@string/daughter</item>
        <item>@string/daughter_in_law</item>
        <item>@string/father</item>
        <item>@string/mother</item>
        <item>@string/grand_son</item>
        <item>@string/grand_daughter</item>
    </string-array>
    <string name="add_new" translatable="false">Add New</string>
    <string name="other" translatable="false">Other</string>
    <string name="partner" translatable="false">Partner</string>
    <string name="father" translatable="false">Father</string>
    <string name="mother" translatable="false">Mother</string>
    <string name="brother" translatable="false">Brother</string>
    <string name="sister" translatable="false">Sister</string>
    <string name="son" translatable="false">Son</string>
    <string name="daughter" translatable="false">Daughter</string>
    <string name="wife" translatable="false">Wife</string>
    <string name="husband" translatable="false">Husband</string>
    <string name="daughter_in_law" translatable="false">Daughter-In-Law</string>
    <string name="grand_son" translatable="false">Grand Son</string>
    <string name="grand_daughter" translatable="false">Grand Daughter</string>
    <string name="fragment_title_1" translatable="false">Relatives</string>
    <string name="fragment_title_2" translatable="false">Photo</string>
    <string name="fragment_title_3" translatable="false">Facts</string>
    <string name="map_api_key" translatable="false">AIzaSyDci3uC0jldqqy0I4g4D1QpEauiVONXa1Y</string>
    <string name="choose_language" translatable="false">Change Language</string>
    <string name="register" translatable="false">Register</string>
    <string name="email">Email</string>
    <string name="or_login_with">Or Login with</string>
    <string name="do_you_have_an_account_register_now">Do you have an account?</string>
    <string name="yes">Yes</string>
    <string name="loading">Working…</string>
    <string name="username" translatable="false">username</string>
    <string name="reset_type" translatable="false">reset_type</string>
    <string name="hint_address">Address</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="hint_name">First Name</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_mobile">10 digit mobile</string>
    <string name="hint_password">PIN</string>
    <string name="hint_conform_password">Confirm PIN</string>
    <string name="how_to_register">How to Register?</string>
    <string name="already_have_a_account_sign_in">Already have a account?</string>
    <string name="locale_sp" translatable="false">Locale_sp</string>
    <string name="main">Main Details</string>
    <string name="contact">Contanct details</string>
    <string name="personal">Personal details</string>
    <string name="professonal">Professional details</string>
    <string name="_matrimony">Matrimony details</string>
    <string name="some_more">Some more</string>
    <string name="ss_head_name" translatable="false">@string/head_name</string>
    <string name="ss_family_code" translatable="false">@string/member_code</string>
    <string name="ss_mem_name" translatable="false">@string/member_name</string>
    <string name="ss_father_name" translatable="false">@string/father_name</string>
    <string name="ss_mother_name" translatable="false">@string/mother_name</string>
    <string name="ss_sp_surname" translatable="false">@string/sub_cast_id</string>
    <string name="ss_sp_samaj" translatable="false">@string/local_community_id</string>
    <string name="ss_sp_sub_samaj" translatable="false">@string/sub_community_id</string>
    <string name="ss_sp_marital" translatable="false">@string/marital_status</string>
    <string name="ss_sp_city" translatable="false">@string/city_id</string>
    <string name="ss_sp_gender" translatable="false">@string/gender</string>
    <string name="ss_sp_native" translatable="false">@string/native_place_id</string>
    <string name="ss_minage" translatable="false">@string/min_age</string>
    <string name="ss_maxage" translatable="false">@string/max_age</string>
    <string name="ss_edt_email" translatable="false">@string/email_address</string>
    <string name="ss_edt_mobile" translatable="false">@string/mobile</string>
    <string name="ss_edt_local_add" translatable="false">@string/local_address</string>
    <string name="ss_edt_permanent_add" translatable="false">address</string>
    <string name="ss_edt_pin_code" translatable="false">@string/pincode</string>
    <string name="ss_edt_area" translatable="false">@string/area</string>
    <string name="ss_sp_state" translatable="false">@string/state_id</string>
    <string name="ss_edt_bdate" translatable="false">@string/birth_date</string>
    <string name="ss_edt_mdate" translatable="false">@string/marriage_date</string>
    <string name="ss_sp_education" translatable="false">@string/education_id</string>
    <string name="ss_sp_gotra" translatable="false">@string/gotra_id</string>
    <string name="ss_sp_bg" translatable="false">@string/blood_group</string>
    <string name="ss_chk_is_donor" translatable="false">@string/is_donor</string>
    <string name="ss_chk_is_rented" translatable="false">@string/is_rented</string>
    <string name="ss_chk_is_expired" translatable="false">@string/is_expired</string>
    <string name="ss_edt_office" translatable="false">@string/business_address</string>
    <string name="ss_sp_main_cat" translatable="false">@string/business_category_id</string>
    <string name="ss_sp_sub_cat" translatable="false">@string/business_sub_category_id</string>
    <string name="ss_sp_occupation" translatable="false">@string/occupation_id</string>
    <string name="ss_sp_activity" translatable="false">@string/current_activity_id</string>
    <string name="ss_edt_birth_time" translatable="false">@string/birth_time</string>
    <string name="ss_min_height" translatable="false">@string/min_height</string>
    <string name="ss_max_height" translatable="false">@string/max_height</string>
    <string name="ss_min_weight" translatable="false">@string/min_weight</string>
    <string name="ss_max_weight" translatable="false">@string/max_weight</string>
    <string name="ss_sp_bplace" translatable="false">@string/birth_place</string>
    <string name="ss_chk_is_spect" translatable="false">@string/is_spect</string>
    <string name="ss_chk_is_shani" translatable="false">@string/is_shani</string>
    <string name="ss_chk_is_mangal" translatable="false">@string/is_mangal</string>
    <string name="ss_edt_created" translatable="false">created_dt</string>
    <string name="ss_edt_updated" translatable="false">@string/updated_dt</string>
    <string name="ss_min_percentage" translatable="false">min_percentage</string>
    <string name="ss_max_percentage" translatable="false">max_percentage</string>
    <string name="ss_maxAge" translatable="false">max_age</string>
    <string name="ss_minAge" translatable="false">min_age</string>
    <string name="ss_true" translatable="false">true</string>
    <string name="ss_gender" translatable="false">Gender</string>
    <string name="ss_native" translatable="false">Native</string>
    <string name="kgPopup">(kg)</string>
    <string name="matrimonyDetail">Matrimony</string>
    <string name="interested">Interested?</string>
    <string name="about_meDetails">About Me</string>
    <string name="facebook_profile_url">Facebook Profile URL</string>
    <string name="birthtime">BirthTime</string>
    <string name="birthplace">BirthPlace</string>
    <string name="hh_mm_with_24_hours">HH:MM with 24 Hours</string>
    <string name="meter">(cm)</string>
    <string name="spectacles">Glasses</string>
    <string name="mangal">Mangal</string>
    <string name="shani">Shani</string>
    <string name="no_internet">No internet connection!</string>
    <string name="check_network">Please check your internet connection and try again</string>
    <string name="retry">Retry</string>
    <string name="hobbypro">Hobby</string>
    <string name="expectationpro">Expectation</string>
    <string name="weightpro">weight</string>
    <string name="heightpro">height</string>
</resources>