<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/matrimonyDetail"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/chk_interested"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="false"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/interested"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/about_meDetails" />

                    <EditText
                        android:id="@+id/edtAbout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_color_gray"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="left|top"
                        android:inputType="textMultiLine|textCapWords"
                        android:lines="3"
                        android:maxLines="3"
                        android:minLines="3"
                        android:padding="5dp"
                        android:scrollbars="vertical"
                        android:singleLine="true"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/facebook_profile_url"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edt_fb_url"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/border_color_gray"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="https://"
                        android:inputType="textCapWords"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="0.6"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/birthtime"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txt_btime"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="@drawable/border_color_gray"
                                android:fontFamily="@font/montserrat_regular"
                                android:gravity="center_vertical"
                                android:padding="5dp"
                                android:singleLine="true"
                                android:textSize="18sp" />

                        </LinearLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/hh_mm_with_24_hours"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="@string/birthplace"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edt_bplace"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/border_color_gray"
                            android:fontFamily="@font/montserrat_regular"
                            android:inputType="textCapWords"
                            android:paddingLeft="5dp"
                            android:singleLine="true"
                            android:textSize="16sp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/hobbypro"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edt_hobby"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/border_color_gray"
                        android:fontFamily="@font/montserrat_regular"
                        android:inputType="textCapWords"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/expectationpro" />

                    <EditText
                        android:id="@+id/edt_expectation"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/border_color_gray"
                        android:fontFamily="@font/montserrat_regular"
                        android:inputType="textCapWords"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/weightpro" />

                            <EditText
                                android:id="@+id/edt_weight"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="@drawable/border_color_gray"
                                android:fontFamily="@font/montserrat_regular"
                                android:gravity="center"
                                android:inputType="number"
                                android:maxLength="8"
                                android:singleLine="true"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginLeft="3dp"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="@string/kgPopup" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/heightpro" />

                            <EditText
                                android:id="@+id/edt_height"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="@drawable/border_color_gray"
                                android:fontFamily="@font/montserrat_regular"
                                android:gravity="center"
                                android:inputType="number"
                                android:maxLength="8"
                                android:singleLine="true"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginLeft="3dp"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="@string/meter" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chk_glass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/spectacles"
                        android:textSize="16sp" />

                    <CheckBox
                        android:id="@+id/chk_is_mangal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/mangal"
                        android:textSize="16sp" />

                    <CheckBox
                        android:id="@+id/chk_is_shani"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/shani"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>