<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/no_internet_image2"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:src="@drawable/animated2" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/no_internet_image"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:src="@drawable/animated1" />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/main_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/float_transparent"
                android:gravity="center"
                android:text="@string/no_internet"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorText" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/secondary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/float_transparent"
                android:gravity="center"
                android:text="@string/check_network"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorGray" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/retry_button"
                android:paddingStart="22dp"
                android:paddingTop="4dp"
                android:paddingEnd="22dp"
                android:paddingBottom="4dp"
                android:text="@string/retry"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorTree"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</layout>

